--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - "main"
 
+concurrency:
+  group: ${{ github.head_ref }}
+  cancel-in-progress: true
+
+
 jobs:
   docker:
     runs-on: ubuntu-latest
