--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,7 +9,6 @@ concurrency:
   group: ${{ github.ref_name }}
   cancel-in-progress: true
 
-
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -30,4 +29,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: ${{ secrets.DOCKER_USER }}/karl-bot:latest
+          tags: ${{ secrets.DOCKER_USER }}/name-bot:latest
