--- a/charts/name-bot/templates/secret.yaml
+++ b/charts/name-bot/templates/secret.yaml
@@ -5,6 +5,6 @@ metadata:
   name: config
 type: Opaque
 data:
-  token: {{ .Values.secret.token | b64enc }}
-  user_id: {{ .Values.secret.user_id | b64enc }}
-  super_user_id: {{ .Values.secret.super_user_id | b64enc }}
+  token: {{ .Values.secret.token | quote  | b64enc }}
+  user_id: {{ .Values.secret.user_id | quote | b64enc }}
+  super_user_id: {{ .Values.secret.super_user_id | quote | b64enc }}
