--- a/charts/name-bot/templates/secret.yaml
+++ b/charts/name-bot/templates/secret.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: config
+  namespace: "name-bot"
 type: Opaque
 data:
   token: {{ .Values.secret.token | quote  | b64enc }}
