--- a/charts/name-bot/templates/deployment.yaml
+++ b/charts/name-bot/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: "name-bot"
+  namespace: "name-bot"
   labels:
     app: "name-bot"
 spec:
@@ -33,7 +34,7 @@ spec:
 
             - name: SUPER_USER_ID
               valueFrom:
-                  secretKeyRef:
+                secretKeyRef:
                   name: config
                   key: super_user_id
 
