--- a/charts/name-bot/templates/deployment.yaml
+++ b/charts/name-bot/templates/deployment.yaml
@@ -20,6 +20,11 @@ spec:
           image: "{{ .Values.image.name }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
+            - name: DISCORD_CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: config
+                  key: client_id
             - name: DISCORD_TOKEN
               valueFrom:
                 secretKeyRef:
