--- a/charts/name-bot/templates/secret.yaml
+++ b/charts/name-bot/templates/secret.yaml
@@ -7,6 +7,6 @@ metadata:
 type: Opaque
 data:
   client_id: {{ .Values.secret.client_id | quote | b64enc }}
-  token: {{ .Values.secret.token | quote  | b64enc }}
+  token: {{ .Values.secret.token  | b64enc }}
   user_id: {{ .Values.secret.user_id | quote | b64enc }}
   super_user_id: {{ .Values.secret.super_user_id | quote | b64enc }}
